agregando funcionalidad de citas y areglo al campo fecha_cita

--- a/src/views/informacionTurnos.ejs
+++ b/src/views/informacionTurnos.ejs
@@ -35,13 +35,13 @@
 
                 <legend>Selecciona un tipo de cita:</legend><br>
                 <input type="radio" id="turnoNormal" name="tipo_cita" value="Cita Normal">
-                <label for="turnoNormal">Cita Normal</label><br>
+                <label for="turnoNormal">Cita Normal (Primera vez)</label><br>
             
                 <input type="radio" id="turnoEspecial" name="tipo_cita" value="Cita Especial">
-                <label for="turnoEspecial">Cita Especial</label><br>
+                <label for="turnoEspecial">Cita Especial (Control)</label><br>
             
                 <input type="radio" id="turnoPrioritario" name="tipo_cita" value="Cita Prioritario">
-                <label for="turnoPrioritario">Cita Prioritaria</label><br><br>
+                <label for="turnoPrioritario">Cita Prioritaria (Emergencia)</label><br><br>
                 
 
                 <label for="hora">Seleccione la hora de su cita:</label>
